# CMake_glfw

./: .gitignore  CMakeLists.txt  ProjectNameConfig.h.in  main.cpp  run.sh
Adder/: adder.h
